creating zoom effect on the images (when hovering)  and fixing white spaces

--- a/css/style.css
+++ b/css/style.css
@@ -378,11 +378,21 @@ testimonials
 ********************** */
 
 .section-testimonials {
-  padding: 9.6rem 0;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+  background-color: #fdf2e9;
+}
+
+.testamonial-container {
+  padding: 9.6rem;
 }
 
 .testimonials {
-  gap: 9.8rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 4.8rem;
+  column-gap: 8rem;
 }
 
 .customer-img-testamonial {
@@ -401,4 +411,22 @@ testimonials
 .testimonial-name {
   font-size: 1.6rem;
   color: #666;
+}
+.testamonial-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+.gallery-image-container {
+  overflow: hidden;
+}
+.testamonial-gallery-image {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+
+.testamonial-gallery-image:hover {
+  transform: scale(1.1);
 }
